some initial work on v3 for better loom compatibility